	- Isaac.GetCurrentStageConfigId(): returns the stagesid from the stages xml for the current floor.
* Familiar :
	- RemoveFromPlayer
	- CanBlockProjectiles
	- CanBeDamagedByProjectiles
	- CanBeDamagedByEnemies
	- CanBeDamagedByLasers
* EntityNPC :
	- GetDarkRedChampionRegenTimer
* EntityPlayer:
	- GetUrnSouls
* Minimap :
	- SetState
	- SetHoldTime
* XMLData :
	- XMLData.GetEntryByOrder: gets entries in the order they appear on the xmls.
* Callbacks :
	- MC_POST_NPC_DARK_RED_CHAMPION_REGEN: Called right after a dark red champion regenerates out of goo form
	- MC_POST_ACHIEVEMENT_UNLOCK: Called after an achievement is unlocked, has the achievement id as its param
	- MC_PRE/POST_MINIMAP_UPDATE: Called right before or right after the minimap is updated
	- MC_PRE/POST_MINIMAP_RENDER: Called right before or right after the minimap is rendered
  	- MC_PRE/POST_PLAYER_ADD_HEARTS(EntityPlayer Player, int Amount, AddHealthType AddHealthType, bool OptionalArg): Called when hearts are added to the player, allows changing the added amount of hearts.
	- MC_POST_RENDER_PLAYER_HEAD/BODY we had the pre but not the post. Same args as the pre, but with the updated vector if its changed on pre
	- MC_POST_PLAYERHUD_ACTIVE_ITEM now has an additional "ChargeBarOffset" arg (the screen position where the charge bar would be rendered)
* ImGui now supports multiline input! Use CTRL + Enter for a newline. Useful for pasting Lua scripts or making fortunes.
/newline/
Modified:
* Entity :
	- GetCollisionCapsule offset vector argument is now optional (Vector.Zero)
* Pickup :
	- Pickup:IsBlind method now checks natural blind effect (also added "CheckForcedBlindOnly" optional argument)
* Changed the destination goal sprites from the daily menu to match the style of the other paper sprites
/newline/
Fixes:
	* Fixed a vanilla game crash that happens with detonator+godhead which has been around for years