@@ -618,6 +618,13 @@ struct RoomDescriptor_SavedEntities {
 		return 1;
 	}
 
+	LUA_FUNCTION(Lua_Clear) {
+		RoomDescriptor_SavedEntities* ud = GetData(L, 1);
+		ud->data->clear();
+
+		return 0;
+	}
+
 	LUA_FUNCTION(Lua_MetaLen) {
 		RoomDescriptor_SavedEntities* ud = GetData(L, 1);
 		lua_pushinteger(L, ud->data->size());
@@ -630,6 +637,7 @@ struct RoomDescriptor_SavedEntities {
 luaL_Reg RoomDescriptor_SavedEntities::methods[] = {
 	{ "Get", RoomDescriptor_SavedEntities::Lua_Get },
 	{ "GetByType", RoomDescriptor_SavedEntities::Lua_GetByType },
+	{ "Clear", RoomDescriptor_SavedEntities::Lua_Clear },
 	{ "__len", RoomDescriptor_SavedEntities::Lua_MetaLen },
 	{ NULL, NULL }
 };
@@ -706,6 +714,14 @@ struct RoomDescriptor_SavedGridEntities {
 		return 1;
 	}
 
+	/*LUA_FUNCTION(Lua_Clear) {
+		RoomDescriptor_SavedGridEntities* ud = GetData(L, 1);
+		ud->data->clear();
+
+		return 0;
+	}
+	*/
+
 	LUA_FUNCTION(Lua_MetaLen) {
 		RoomDescriptor_SavedGridEntities* ud = GetData(L, 1);
 		lua_pushinteger(L, ud->data->size());
@@ -719,6 +735,7 @@ luaL_Reg RoomDescriptor_SavedGridEntities::methods[] = {
 
 	{ "Get", RoomDescriptor_SavedGridEntities::Lua_Get },
 	{ "GetByType", RoomDescriptor_SavedGridEntities::Lua_GetByType },
+	//{ "Clear", RoomDescriptor_SavedGridEntities::Lua_Clear },
 	{ "__len", RoomDescriptor_SavedGridEntities::Lua_MetaLen },
 	{ NULL, NULL }
 };
